Problem about vertical align solve

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,7 +3,6 @@
 .header {
 	display: flex;
 	justify-content: space-between;
-	position: fixed;
 	top: 0;
 	z-index: 10;
 	width: 100%;
